[project]
name = "whatsapp-lead-integration"
version = "0.1.0"
description = ""
authors = [
    {name = "Juan Anduca",email = "juan@flipcrm.com.br"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.1,<4.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "whatsapp_lead_integration", from = "src"}]


[tool.poetry.group.production.dependencies]
gunicorn = "^23.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
